# mathparser

./: CMakeLists.txt  README.md  buildfiles.sh
src/: main.cpp
src/arg_parser/: arg_parser.cpp  arg_parser.h
src/lexer/: lexer.cpp  lexer.h  lexer_node.cpp  lexer_node.h  lexer_sequence.cpp  lexer_sequence.h  matcher.cpp  matcher.h  node_stack.cpp  node_stack.h
src/parser/: parse_stack.cpp  parse_stack.h  parser.cpp  parser.h  parser_expression.cpp  parser_expression.h  simplification_rules.h  tokens.h
src/tokenregex/: main.cpp  tokenregex.hpp
